Add relation tag

--- a/objectapp/templates/objectapp/_gbobject_detail.html
+++ b/objectapp/templates/objectapp/_gbobject_detail.html
@@ -26,6 +26,7 @@
       <a href="{{ Objecttype.get_absolute_url }}" title="{{ Objecttype }}" rel="tag Objecttype">{{ Objecttype }}</a>{% if not forloop.last %}, {% endif %}{% endfor %}{% endif %}.
     </p>
   <p> Add Attributes </p>
+  <p> Add Relations </p>
 </div>
 
 </div>
